--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,4 @@ authors = ["Without Boats <woboats@gmail.com>"]
 [dependencies]
 toml = "0.4.5"
 serde = "1.0.15"
-
-[dependencies.failure]
-git = "https://github.com/withoutboats/failure"
+failure = "0.1.0"
