Use Deserializer as the handshake.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
+authors = ["Without Boats <woboats@gmail.com>"]
 name = "configure"
 version = "0.1.0"
-authors = ["Without Boats <woboats@gmail.com>"]
 
 [dependencies]
+erased-serde = "0.3.3"
+heck = "0.3.0"
+serde = "1.0.21"
 toml = "0.4.5"
-serde = "1.0.15"
-failure = "0.1.0"
+
+[dev-dependencies]
+serde_derive = "1.0.21"
+
+[dev-dependencies.test-setup]
+path = "./test-setup"
+
+[workspace]
