--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,7 @@ serde_derive = "1.0.21"
 [dev-dependencies.test-setup]
 path = "./test-setup"
 
+[dev-dependencies.configure_derive]
+path = "./configure_derive"
+
 [workspace]
