--- a/configure_derive/Cargo.toml
+++ b/configure_derive/Cargo.toml
@@ -13,7 +13,7 @@ serde = "1.0.21"
 serde_derive = "1.0.21"
 
 [dev-dependencies.configure]
-path = ".."
+path = "../configure"
 
 [lib]
 proc-macro = true
