--- a/configure/Cargo.toml
+++ b/configure/Cargo.toml
@@ -2,8 +2,9 @@
 name = "configure"
 authors = ["Without Boats <woboats@gmail.com>"]
 description = "Configuration management"
+documentation = "https://docs.rs/configure"
 license = "MIT OR Apache-2.0"
-version = "0.1.0"
+version = "0.1.1"
 
 [dependencies]
 erased-serde = "0.3.3"
