--- a/configure_derive/Cargo.toml
+++ b/configure_derive/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 authors = ["Without Boats <woboats@gmail.com>"]
 description = "Derives for the configure crate."
+repository = "https://github.com/withoutboats/configure"
 license = "MIT OR Apache-2.0"
 name = "configure_derive"
 version = "0.1.0"
